--- a/packages/recorder-extension/static/options.html
+++ b/packages/recorder-extension/static/options.html
@@ -4,8 +4,23 @@
     <meta charset="UTF-8">
     <title>TestRing options</title>
     <link rel="icon" type="image/png" href="icon.png">
+    <script src="options.bundle.js"></script>
 </head>
 <body>
     <h1>Options page</h1>
+
+    <p>
+        Http port:
+        <span id="httpPort"></span>
+    </p>
+    <p>
+        WS port:
+        <span id="wsPort"></span>
+    </p>
+    <p>
+        App id:
+        <span id="appId"></span>
+    </p>
+
 </body>
 </html>
