Chrome extension setting properties via options page

--- a/packages/recorder-extension/static/popup.html
+++ b/packages/recorder-extension/static/popup.html
@@ -1,8 +1,15 @@
-<html>
+<html lang="en">
     <head>
-
+        <title>Testring popup</title>
+        <script src="popup.bundle.js"></script>
+        <style>
+            * {
+                margin: 0;
+                padding: 0;
+            }
+        </style>
     </head>
     <body>
-        <h1>Hello Extensions</h1>
+        <p>Waiting for initialize</p>
     </body>
 </html>
