Devtools editor tab for chrome extension

--- a/packages/devtool-extension/static/popup.html
+++ b/packages/devtool-extension/static/popup.html
@@ -10,6 +10,6 @@
         </style>
     </head>
     <body>
-        <p>Waiting for initialize</p>
+        <p style="margin: 20px">Waiting&nbsp;for&nbsp;initialization</p>
     </body>
 </html>
