WAT-981 Fix for window open\switch\close methods

--- a/packages/e2e-test-app/static-fixtures/click.html
+++ b/packages/e2e-test-app/static-fixtures/click.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Click test</title>
     <script>
         function test() {
             document.getElementById('output').innerText = 'test';
