--- a/packages/e2e-test-app/static-fixtures/cookie.html
+++ b/packages/e2e-test-app/static-fixtures/cookie.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Cookie test </title>
     <script>
         function printCookie() {
             document.getElementById('cookie_found').innerText = document.cookie;
