--- a/packages/e2e-test-app/static-fixtures/elements.html
+++ b/packages/e2e-test-app/static-fixtures/elements.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Elements test</title>
 </head>
 <body data-test-automation-id="root">
     <ul data-test-automation-id="existingElement">
