--- a/packages/e2e-test-app/static-fixtures/wait-for-exist.html
+++ b/packages/e2e-test-app/static-fixtures/wait-for-exist.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Wait For Exist test</title>
     <script>
         function showElement() {
             setTimeout(() => {
