--- a/packages/e2e-test-app/static-fixtures/alert.html
+++ b/packages/e2e-test-app/static-fixtures/alert.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Alert test</title>
 </head>
 <body data-test-automation-id="root">
     <div data-test-automation-id="alerts">
