--- a/packages/e2e-test-app/static-fixtures/css.html
+++ b/packages/e2e-test-app/static-fixtures/css.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>CSS test</title>
     <style>
         .customDivClass {
             background-color: darkred;
