--- a/packages/e2e-test-app/static-fixtures/form.html
+++ b/packages/e2e-test-app/static-fixtures/form.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Form test</title>
 </head>
 <body data-test-automation-id="root">
     <form data-test-automation-id="form">
