--- a/packages/e2e-test-app/static-fixtures/html-and-text.html
+++ b/packages/e2e-test-app/static-fixtures/html-and-text.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Html and Text test</title>
     <script>
         var addedForIds = [];
 
