--- a/packages/e2e-test-app/static-fixtures/click.html
+++ b/packages/e2e-test-app/static-fixtures/click.html
@@ -4,13 +4,36 @@
     <meta charset="UTF-8">
     <title>Click test</title>
     <script>
+        const SUCCESS = 'success';
+
         function test() {
-            document.getElementById('output').innerText = 'test';
+            document.getElementById('output').innerText = SUCCESS;
+        }
+
+        function halfHoveredTest(e) {
+          document.getElementById('halfHoveredOutput').innerText = SUCCESS;
+        }
+
+        function partiallyHoveredTest() {
+          document.getElementById('partiallyHoveredOutput').innerText = SUCCESS;
         }
     </script>
 </head>
 <body data-test-automation-id="root">
     <button data-test-automation-id="button" onclick="test()">Press me!</button>
     <p id="output" data-test-automation-id="output"></p>
+
+    <div style="position: relative; width: 200px;">
+        <button style="position: relative; z-index: 1; width: 100%;" data-test-automation-id="halfHoveredButton" onclick="halfHoveredTest()">Press me!</button>
+        <div data-test-automation-id="halfHoveredOverlay" style="position: absolute; z-index: 2; width: 100%; left: -1px; top: -1px; bottom: -1px; background: #000;" onclick="this.style.width = '50%'"></div>
+    </div>
+    <p id="halfHoveredOutput" data-test-automation-id="halfHoveredOutput"></p>
+
+    <div style="position: relative; width: 200px;">
+        <button style="width: 100%;" data-test-automation-id="partiallyHoveredButton" onclick="partiallyHoveredTest()">Press me!</button>
+        <div data-test-automation-id="partiallyHoveredOverlay" style="position: absolute; width: 100%; left: -1px; top: -1px; bottom: -1px; background: #000;" onclick="this.style.width = '30%'"></div>
+    </div>
+    <p id="partiallyHoveredOutput" data-test-automation-id="partiallyHoveredOutput"></p>
+</body>
 </body>
 </html>
