WAT-1054 added first version of test to write screenshot

--- a/packages/e2e-test-app/static-fixtures/screenshot.html
+++ b/packages/e2e-test-app/static-fixtures/screenshot.html
@@ -9,7 +9,7 @@
 </head>
 
 <body data-test-automation-id="root">
-    <div style="position: relative; width: 100%; height: 100%;padding:0;background-color: red;">
+    <div style="position: relative; width: 100px; height: 100px;padding:0;background-color: red;">
 
     </div>
 </body>
