--- a/packages/e2e-test-app/static-fixtures/screenshot.html
+++ b/packages/e2e-test-app/static-fixtures/screenshot.html
@@ -8,7 +8,7 @@
 
 </head>
 
-<body data-test-automation-id="root">
+<body data-test-automation-id="root" style="padding:0;">
     <div style="position: relative; width: 100px; height: 100px;padding:0;background-color: red;">
 
     </div>
