--- a/packages/e2e-test-app/static-fixtures/elements.html
+++ b/packages/e2e-test-app/static-fixtures/elements.html
@@ -5,12 +5,14 @@
     <title>Elements test</title>
 </head>
 <body data-test-automation-id="root">
-    <ul data-test-automation-id="existingElement">
-        <li data-test-automation-id="li"></li>
-        <li data-test-automation-id="li"></li>
-        <li data-test-automation-id="li"></li>
-        <li data-test-automation-id="li"></li>
-        <li data-test-automation-id="li"></li>
-    </ul>
+<ul data-test-automation-id="existingElement">
+    <li data-test-automation-id="li"></li>
+    <li data-test-automation-id="li"></li>
+    <li data-test-automation-id="li"></li>
+    <li data-test-automation-id="li"></li>
+    <li data-test-automation-id="li"></li>
+</ul>
+<input type="checkbox" data-test-automation-id="checkbox1">
+<input type="checkbox" data-test-automation-id="checkbox2" checked>
 </body>
 </html>
