--- a/packages/e2e-test-app/static-fixtures/elements.html
+++ b/packages/e2e-test-app/static-fixtures/elements.html
@@ -14,5 +14,6 @@
 </ul>
 <input type="checkbox" data-test-automation-id="checkbox1">
 <input type="checkbox" data-test-automation-id="checkbox2" checked>
+<textarea data-test-automation-id="textarea" ></textarea>
 </body>
 </html>
