WAT-5355: Add possibility to take screenshots of elements

--- a/packages/e2e-test-app/static-fixtures/screenshot.html
+++ b/packages/e2e-test-app/static-fixtures/screenshot.html
@@ -9,8 +9,7 @@
 </head>
 
 <body data-test-automation-id="root" style="padding:0;">
-    <div style="position: relative; width: 100px; height: 100px;padding:0;background-color: red;">
-
+    <div data-test-automation-id="testElement" style="position: relative; width: 100px; height: 100px;padding:0;background-color: red;">
     </div>
 </body>
 
